--- a/aulysv/package.json
+++ b/aulysv/package.json
@@ -17,5 +17,12 @@
 		"tailwindcss": "^3.4.1",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"lucide-react": "^0.352.0",
+		"tailwind-merge": "^2.2.1",
+		"tailwindcss-animate": "^1.0.7"
+	}
 }
