--- a/aulysv/package.json
+++ b/aulysv/package.json
@@ -5,7 +5,9 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -14,15 +16,11 @@
 		"autoprefixer": "^10.4.18",
 		"postcss": "^8.4.35",
 		"svelte": "^5.0.0-next.1",
+		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.1",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.0",
-		"lucide-react": "^0.352.0",
-		"tailwind-merge": "^2.2.1",
-		"tailwindcss-animate": "^1.0.7"
-	}
+	"type": "module"
 }
