--- a/aulysv/package.json
+++ b/aulysv/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/node": "^20.11.25",
 		"autoprefixer": "^10.4.18",
 		"postcss": "^8.4.35",
 		"svelte": "^5.0.0-next.1",
@@ -22,5 +23,12 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"lucide-react": "^0.352.0",
+		"tailwind-merge": "^2.2.1",
+		"tailwindcss-animate": "^1.0.7"
+	}
 }
