--- a/aulysv/package.json
+++ b/aulysv/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/node": "^20.11.25",
 		"autoprefixer": "^10.4.18",
+		"daisyui": "^4.7.2",
 		"postcss": "^8.4.35",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
