--- a/aulys/package.json
+++ b/aulys/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "aulysv",
+	"name": "aulys",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -13,23 +13,15 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/node": "^20.11.25",
 		"autoprefixer": "^10.4.18",
 		"daisyui": "^4.7.2",
 		"postcss": "^8.4.35",
-		"svelte": "^5.0.0-next.1",
+		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.0",
-		"lucide-react": "^0.352.0",
-		"tailwind-merge": "^2.2.1",
-		"tailwindcss-animate": "^1.0.7"
-	}
+	"type": "module"
 }
