--- a/aulys/package.json
+++ b/aulys/package.json
@@ -29,6 +29,7 @@
 		"@fortawesome/fontawesome-free": "^6.5.1",
 		"@fortawesome/free-brands-svg-icons": "^6.5.1",
 		"@fortawesome/free-solid-svg-icons": "^6.5.1",
+		"gsap": "^3.12.5",
 		"svelte-fa": "^4.0.2"
 	}
 }
