--- a/aulys/package.json
+++ b/aulys/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.10",
+		"@types/markdown-it": "^13.0.7",
 		"autoprefixer": "^10.4.18",
 		"daisyui": "^4.7.2",
 		"postcss": "^8.4.35",
@@ -30,6 +31,7 @@
 		"@fortawesome/free-brands-svg-icons": "^6.5.1",
 		"@fortawesome/free-solid-svg-icons": "^6.5.1",
 		"gsap": "^3.12.5",
+		"markdown-it": "^14.0.0",
 		"svelte-fa": "^4.0.2"
 	}
 }
