--- a/aulys/package.json
+++ b/aulys/package.json
@@ -30,6 +30,7 @@
 		"@fortawesome/fontawesome-free": "^6.5.1",
 		"@fortawesome/free-brands-svg-icons": "^6.5.1",
 		"@fortawesome/free-solid-svg-icons": "^6.5.1",
+		"@vercel/analytics": "^1.3.1",
 		"gsap": "^3.12.5",
 		"markdown-it": "^14.0.0",
 		"pdfkit": "^0.14.0",
