--- a/aulys/package.json
+++ b/aulys/package.json
@@ -14,7 +14,9 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.10",
+		"@types/leaflet": "^1.9.12",
 		"@types/markdown-it": "^13.0.7",
+		"@types/three": "^0.167.1",
 		"autoprefixer": "^10.4.18",
 		"daisyui": "^4.7.2",
 		"postcss": "^8.4.35",
@@ -31,9 +33,14 @@
 		"@fortawesome/free-brands-svg-icons": "^6.5.1",
 		"@fortawesome/free-solid-svg-icons": "^6.5.1",
 		"@vercel/analytics": "^1.3.1",
+		"cannon-es": "^0.20.0",
 		"gsap": "^3.12.5",
+		"leaflet": "^1.9.4",
+		"leaflet-gpx": "^2.1.0",
 		"markdown-it": "^14.0.0",
 		"pdfkit": "^0.14.0",
-		"svelte-fa": "^4.0.2"
+		"svelte-fa": "^4.0.2",
+		"svelte-leaflet": "^0.2.0",
+		"three": "^0.132.2"
 	}
 }
