--- a/aulys/package.json
+++ b/aulys/package.json
@@ -38,7 +38,9 @@
 		"leaflet": "^1.9.4",
 		"leaflet-gpx": "^2.1.0",
 		"markdown-it": "^14.0.0",
+		"marked": "^14.1.3",
 		"pdfkit": "^0.14.0",
+		"showdown": "^2.1.0",
 		"svelte-fa": "^4.0.2",
 		"svelte-leaflet": "^0.2.0",
 		"three": "^0.132.2"
