--- a/aulys/package.json
+++ b/aulys/package.json
@@ -35,6 +35,7 @@
 		"@vercel/analytics": "^1.3.1",
 		"cannon-es": "^0.20.0",
 		"gsap": "^3.12.5",
+		"katex": "^0.16.11",
 		"leaflet": "^1.9.4",
 		"leaflet-gpx": "^2.1.0",
 		"markdown-it": "^14.0.0",
